[gd_scene load_steps=8 format=2]

[ext_resource path="res://GUI/BottomFrame.png" type="Texture" id=1]
[ext_resource path="res://Lobby/LobbyTheme.tres" type="Theme" id=2]
[ext_resource path="res://GUI/AudioMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/VideoMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/InGameMenu.gd" type="Script" id=5]
[ext_resource path="res://GUI/Option_Font.tres" type="DynamicFont" id=6]
[ext_resource path="res://GUI/InputMenu.tscn" type="PackedScene" id=7]

[node name="InGameMenu" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 212.0
margin_top = 100.0
margin_right = -212.0
margin_bottom = -100.0
rect_min_size = Vector2( 600, 400 )
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 125.0
margin_top = 17.0
margin_right = 475.0
margin_bottom = 382.0
custom_constants/separation = 15

[node name="OptionLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 350.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 6 )
text = "Option"
align = 1

[node name="Seperator" type="TextureRect" parent="CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 350.0
margin_bottom = 126.0
rect_min_size = Vector2( 350, 50 )
texture = ExtResource( 1 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 141.0
margin_right = 350.0
margin_bottom = 251.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 112.0
margin_right = 238.0
margin_bottom = 110.0

[node name="AudioButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 126.0
margin_bottom = 34.0
text = "Audio Option"

[node name="VideoButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 126.0
margin_bottom = 72.0
text = "Video Option"

[node name="InputButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 126.0
margin_bottom = 110.0
text = "Input Option"

[node name="Seperator3" type="TextureRect" parent="CenterContainer/VBoxContainer"]
margin_top = 266.0
margin_right = 350.0
margin_bottom = 316.0
rect_min_size = Vector2( 350, 50 )
texture = ExtResource( 1 )
expand = true

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 331.0
margin_right = 350.0
margin_bottom = 365.0

[node name="VBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 47.0
margin_right = 303.0
margin_bottom = 34.0
custom_constants/separation = 17

[node name="DoneButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 100.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 0 )
text = "Done"

[node name="BackToMenuButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_left = 117.0
margin_right = 256.0
margin_bottom = 34.0
text = "Back To Menu"

[node name="AudioMenu" parent="." instance=ExtResource( 3 )]

[node name="VideoMenu" parent="." instance=ExtResource( 4 )]
margin_top = -200.0
margin_bottom = 200.0

[node name="InputMenu" parent="." instance=ExtResource( 7 )]

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/AudioButton" to="." method="_on_AudioButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/VideoButton" to="." method="_on_VideoButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/InputButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/DoneButton" to="." method="_on_DoneButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/BackToMenuButton" to="." method="_on_BackToMenuButton_pressed"]
